// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownInput/> should render correctly 1`] = `
<div>
  <span
    class="formLabelWithTooltip"
  >
    <label
      class="label"
      for="settings.choices"
    >
      Dropdown values
      <abbr
        aria-label="required"
        class="abbr"
        title="required"
      >
        *
      </abbr>
    </label>
    <span
      class="material-icons-outlined ml-2"
      id="custom-field-dropdown-tooltip-id"
    >
      info
    </span>
    <button
      class="wrapper import ghost primary small"
      type="button"
    >
      Import from CSV
    </button>
  </span>
  <div
    class="input"
    data-handler-id="T0"
    style="opacity: 1;"
  >
    <div
      class="inputContainer"
    >
      <div
        class="material-icons dragIndicator dragIndicatorActive"
        data-testid="dropdown-choice-1-handle"
        draggable="true"
      >
        drag_indicator
      </div>
      <div
        class="wrapper"
      >
        <input
          class="input"
          data-testid="dropdown-choice-1"
          id="dropdown-choice-1"
          name="dropdown-choice-1"
          placeholder="e.g. Shipping issue::Delay"
          type="text"
          value="Option 1"
        />
      </div>
      <button
        class="wrapper deleteButton wrapper ghost ghost destructive medium"
        data-testid="dropdown-choice-1-remove"
        type="button"
      >
        <i
          class="material-icons icon"
        >
          clear
        </i>
      </button>
    </div>
  </div>
  <div
    class="input"
    data-handler-id="T2"
    style="opacity: 1;"
  >
    <div
      class="inputContainer"
    >
      <div
        class="material-icons dragIndicator dragIndicatorActive"
        data-testid="dropdown-choice-2-handle"
        draggable="true"
      >
        drag_indicator
      </div>
      <div
        class="wrapper"
      >
        <input
          class="input"
          data-testid="dropdown-choice-2"
          id="dropdown-choice-2"
          name="dropdown-choice-2"
          placeholder="e.g. Shipping issue::Delay"
          type="text"
          value="Option 2"
        />
      </div>
      <button
        class="wrapper deleteButton wrapper ghost ghost destructive medium"
        data-testid="dropdown-choice-2-remove"
        type="button"
      >
        <i
          class="material-icons icon"
        >
          clear
        </i>
      </button>
    </div>
  </div>
  <div
    class="input"
    data-handler-id="T4"
    style="opacity: 1;"
  >
    <div
      class="inputContainer"
    >
      <div
        class="material-icons dragIndicator dragIndicatorActive"
        data-testid="dropdown-choice-3-handle"
        draggable="true"
      >
        drag_indicator
      </div>
      <div
        class="wrapper"
      >
        <input
          class="input"
          data-testid="dropdown-choice-3"
          id="dropdown-choice-3"
          name="dropdown-choice-3"
          placeholder="e.g. Shipping issue::Delay"
          type="text"
          value="Option 3"
        />
      </div>
      <button
        class="wrapper deleteButton wrapper ghost ghost destructive medium"
        data-testid="dropdown-choice-3-remove"
        type="button"
      >
        <i
          class="material-icons icon"
        >
          clear
        </i>
      </button>
    </div>
  </div>
  <div
    class="lastInput"
    data-handler-id="T6"
    style="opacity: 1;"
  >
    <div
      class="inputContainer"
    >
      <div
        class="material-icons dragIndicator dragIndicatorDisabled"
      >
        drag_indicator
      </div>
      <div
        class="wrapper"
      >
        <input
          class="input"
          data-testid="dropdown-choice-4"
          id="dropdown-choice-4"
          name="dropdown-choice-4"
          placeholder="e.g. Shipping issue::Delay"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="caption lastInput"
  >
    Type 
    ::
     symbol to add a new child level.
     
    <a
      href="https://docs.gorgias.com/en-US/215327-755feceee342410d80f5cde55e8e4f46#how-to-define-your-fields-to-generate-insights-efficiently"
      rel="noopener noreferrer"
      target="_blank"
    >
      See examples
    </a>
  </div>
</div>
`;

exports[`<DropdownInput/> should show an error for duplicate values 1`] = `
<div>
  <span
    class="formLabelWithTooltip"
  >
    <label
      class="label"
      for="settings.choices"
    >
      Dropdown values
      <abbr
        aria-label="required"
        class="abbr"
        title="required"
      >
        *
      </abbr>
    </label>
    <span
      class="material-icons-outlined ml-2"
      id="custom-field-dropdown-tooltip-id"
    >
      info
    </span>
    <button
      class="wrapper import ghost primary small"
      type="button"
    >
      Import from CSV
    </button>
  </span>
  <div
    class="input"
    data-handler-id="T8"
    style="opacity: 1;"
  >
    <div
      class="inputContainer"
    >
      <div
        class="material-icons dragIndicator dragIndicatorActive"
        data-testid="dropdown-choice-1-handle"
        draggable="true"
      >
        drag_indicator
      </div>
      <div
        class="wrapper hasError"
      >
        <input
          class="input"
          data-testid="dropdown-choice-1"
          id="dropdown-choice-1"
          name="dropdown-choice-1"
          placeholder="e.g. Shipping issue::Delay"
          type="text"
          value="Option 1"
        />
      </div>
      <button
        class="wrapper deleteButton wrapper ghost ghost destructive medium"
        data-testid="dropdown-choice-1-remove"
        type="button"
      >
        <i
          class="material-icons icon"
        >
          clear
        </i>
      </button>
    </div>
    <div
      class="caption error lastInput"
    >
      This value already exists. Please use unique values.
    </div>
  </div>
  <div
    class="input"
    data-handler-id="T10"
    style="opacity: 1;"
  >
    <div
      class="inputContainer"
    >
      <div
        class="material-icons dragIndicator dragIndicatorActive"
        data-testid="dropdown-choice-2-handle"
        draggable="true"
      >
        drag_indicator
      </div>
      <div
        class="wrapper"
      >
        <input
          class="input"
          data-testid="dropdown-choice-2"
          id="dropdown-choice-2"
          name="dropdown-choice-2"
          placeholder="e.g. Shipping issue::Delay"
          type="text"
          value="Option 2"
        />
      </div>
      <button
        class="wrapper deleteButton wrapper ghost ghost destructive medium"
        data-testid="dropdown-choice-2-remove"
        type="button"
      >
        <i
          class="material-icons icon"
        >
          clear
        </i>
      </button>
    </div>
  </div>
  <div
    class="input"
    data-handler-id="T12"
    style="opacity: 1;"
  >
    <div
      class="inputContainer"
    >
      <div
        class="material-icons dragIndicator dragIndicatorActive"
        data-testid="dropdown-choice-3-handle"
        draggable="true"
      >
        drag_indicator
      </div>
      <div
        class="wrapper hasError"
      >
        <input
          class="input"
          data-testid="dropdown-choice-3"
          id="dropdown-choice-3"
          name="dropdown-choice-3"
          placeholder="e.g. Shipping issue::Delay"
          type="text"
          value="Option 1"
        />
      </div>
      <button
        class="wrapper deleteButton wrapper ghost ghost destructive medium"
        data-testid="dropdown-choice-3-remove"
        type="button"
      >
        <i
          class="material-icons icon"
        >
          clear
        </i>
      </button>
    </div>
    <div
      class="caption error lastInput"
    >
      This value already exists. Please use unique values.
    </div>
  </div>
  <div
    class="input"
    data-handler-id="T14"
    style="opacity: 1;"
  >
    <div
      class="inputContainer"
    >
      <div
        class="material-icons dragIndicator dragIndicatorActive"
        data-testid="dropdown-choice-4-handle"
        draggable="true"
      >
        drag_indicator
      </div>
      <div
        class="wrapper"
      >
        <input
          class="input"
          data-testid="dropdown-choice-4"
          id="dropdown-choice-4"
          name="dropdown-choice-4"
          placeholder="e.g. Shipping issue::Delay"
          type="text"
          value="Option 3"
        />
      </div>
      <button
        class="wrapper deleteButton wrapper ghost ghost destructive medium"
        data-testid="dropdown-choice-4-remove"
        type="button"
      >
        <i
          class="material-icons icon"
        >
          clear
        </i>
      </button>
    </div>
  </div>
  <div
    class="lastInput"
    data-handler-id="T16"
    style="opacity: 1;"
  >
    <div
      class="inputContainer"
    >
      <div
        class="material-icons dragIndicator dragIndicatorDisabled"
      >
        drag_indicator
      </div>
      <div
        class="wrapper"
      >
        <input
          class="input"
          data-testid="dropdown-choice-5"
          id="dropdown-choice-5"
          name="dropdown-choice-5"
          placeholder="e.g. Shipping issue::Delay"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="caption lastInput"
  >
    Type 
    ::
     symbol to add a new child level.
     
    <a
      href="https://docs.gorgias.com/en-US/215327-755feceee342410d80f5cde55e8e4f46#how-to-define-your-fields-to-generate-insights-efficiently"
      rel="noopener noreferrer"
      target="_blank"
    >
      See examples
    </a>
  </div>
</div>
`;
